/*
 * You may redistribute this program and/or modify it under the terms of
 * the GNU General Public License as published by the Free Software Foundation,
 * either version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto2";
package p2pnet.transport.proto;

message TransportSocketEndpoint_s {
	/*
	 *  Well, this needs to be standardized somehow.
	 *  Default: 0 (invalid id!)
	 */
	optional uint32 interface_id = 1 [default = 0];
	// Yes, int64 timestamp.
	optional int64 last_usage = 2;

	extensions 16 to max;
}